# jetblack-markdown

./: .gitignore  .pylintrc  DEVELOPMENT.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
demo/: example.py
docs/: 404.html  api.md  api_jetblack_autodoc.md  index.html  index.md  sitemap.xml
docs/api/jetblack_autodoc/: index.html
docs/api/jetblack_markdown/: index.html
docs/api/jetblack_markdown.autodoc/: index.html
docs/api/jetblack_markdown.latex2mathml/: index.html
docs/api/jetblack_markdown.metadata/: index.html
docs/api/jetblack_metadata/: index.html
docs/api_jetblack_autodoc/: index.html
docs/api_jetblack_markdown/: index.html
docs/api_jetblack_metadata/: index.html
docs/class/: index.html
docs/docstrings/: index.html
docs/function/: index.html
docs/search/: search_index.json
docs/templates/: index.html
docs/user-guide/config/: index.html
documentation/: class.md  docstrings.md  function.md  index.md  templates.md
documentation/api/: jetblack_markdown.autodoc.md  jetblack_markdown.latex2mathml.md  jetblack_markdown.md  jetblack_markdown.metadata.md  jetblack_metadata.md
documentation/css/: custom.css
documentation/user-guide/: config.md  styling.md  templates.md
jetblack_markdown/: __init__.py  autodoc.py  autodoc_processor.py  classes.py  constants.py  example.py  example_google.py  functions.py  metadata.py  modules.py  myextension.py  renderers.py  utils.py
jetblack_markdown/metadata/: __init__.py  arguments.py  callables.py  classes.py  common.py  modules.py  properties.py  raises.py  utils.py
jetblack_markdown/templates/: attributes.j2  callable.j2  class.j2  constructor.j2  description.j2  examples.j2  macros.j2  macros.jinja2  macros_verbose.jinja2  metadata.j2  methods.j2  module.j2  parameters.j2  properties.j2  raises.j2  returns.j2  signature.j2  summary.j2  title.j2
site/: 404.html  index.html
site/api_jetblack_autodoc/: index.html
site/api_jetblack_markdown/: index.html
site/api_jetblack_metadata/: index.html
site/class/: index.html
site/css/: custom.css
site/function/: index.html
site/search/: search_index.json
src/jetblack_markdown/: __init__.py  autodoc.py  autodoc_processor.py  latex2mathml.py  latex2mathml_processor.py  utils.py
tests/: mocks.py  test_placeholder.py  test_smoke.py
tests/metadata/: test_callables.py  test_classes.py  test_utils.py
(+13 files in other folders)
