[tool.poetry]
name = "jetblack-markdown"
version = "1.1.0"
description = "A markdown extension for python documentation"
repository = "https://github.com/rob-blackbourn/jetblack-markdown"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "jetblack_markdown" }
]

[tool.poetry.dependencies]
python = "^3.7"
markdown = "^3.3"
docstring-parser = "^0.15"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
autopep8 = "^1"
pytest = "^7"
mkdocs = "^1.3"
pylint = "^2"
mkdocs-material = "^8.5"
types-Markdown = "^3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
