[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetblack-markdown"
version = "1.2.0a3"
authors = [
  { name="Rob Blackbourn", email="rob.blackbourn@gmail.com" },
]
description = "A markdown extension for python documentation"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
readme = "README.md"
dependencies = [
    "markdown>=3.5.1,<4",
    "docstring-parser==0.15",
    "latex2mathml==3.77.0"
]
license = {text = "Apache-2.0"}

[project.urls]
Repository = "https://github.com/rob-blackbourn/jetblack-markdown"
Documentation = "https://rob-blackbourn.github.io/jetblack-markdown"
Issues = "https://github.com/rob-blackbourn/jetblack-markdown/issues"

[tool.setuptools.package-data]
"jetblack_markdown.templates" = ["*.jinja2"]
